--- a/public/Results.html
+++ b/public/Results.html
@@ -7635,13 +7635,13 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [151]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [19]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 
 <span class="c1"># Read the CSV doc into a DataFrame (two-dimensional data)</span>
-<span class="n">initial_df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'../files/nyc_Domain_Registrations_20241115.csv'</span><span class="p">)</span>
+<span class="n">initial_df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'https://docs.google.com/spreadsheets/d/e/2PACX-1vTmO4zZCoQVROb9q_pRRLZG4voK03u3eIzAcsy69R9Q2bAqejFO41_1SzWSoA1m83p8HiNu3xJyiZ1J/pub?gid=1714697285&amp;single=true&amp;output=csv'</span><span class="p">)</span>
 
 <span class="nb">print</span><span class="p">(</span><span class="n">initial_df</span><span class="p">)</span>
 </pre></div>
@@ -7656,18 +7656,18 @@ a.anchor-link {
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
-<pre>                         url       registration_date nexus_category
-0               caffeine.nyc  12/23/2015 05:39:04 PM          INDIV
-1                 flirts.nyc  02/18/2024 06:56:50 PM            ORG
-2                aclipse.nyc  01/04/2017 06:06:11 AM          INDIV
-3           brooklynruns.nyc  04/10/2018 03:46:27 PM            ORG
-4             bignycpass.nyc  10/14/2015 11:41:15 AM            ORG
-...                      ...                     ...            ...
-61230       iamelemental.nyc  10/03/2014 03:40:47 PM          INDIV
-61231      michaelsuarez.nyc  05/23/2024 10:01:17 AM          INDIV
-61232             lvrusa.nyc  11/04/2014 04:04:48 PM          INDIV
-61233           16000psi.nyc  02/02/2023 01:38:06 PM          INDIV
-61234  connectingthedots.nyc  03/06/2023 06:47:11 PM          INDIV
+<pre>                    url       registration_date nexus_category
+0               nic.nyc  08/09/2013 10:39:30 PM            ORG
+1        applestore.nyc   06/20/2014 3:10:35 PM            ORG
+2              yelp.nyc   06/20/2014 3:10:35 PM            ORG
+3            iheart.nyc   06/20/2014 3:10:35 PM            ORG
+4         priceline.nyc   06/20/2014 3:10:36 PM            ORG
+...                 ...                     ...            ...
+61230         annex.nyc   11/14/2024 9:12:34 PM            ORG
+61231  studiotehran.nyc   11/14/2024 9:40:12 PM          INDIV
+61232  citybikeboys.nyc  11/14/2024 10:25:40 PM          INDIV
+61233   photobooths.nyc  11/14/2024 10:42:55 PM          INDIV
+61234        cypher.nyc  11/14/2024 11:58:58 PM          INDIV
 
 [61235 rows x 3 columns]
 </pre>
@@ -7691,7 +7691,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [152]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [20]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
@@ -7758,7 +7758,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [153]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [21]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">counts</span><span class="o">.</span><span class="n">plot</span><span class="p">()</span>
@@ -7808,7 +7808,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [154]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [22]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">plt</span><span class="o">.</span><span class="n">close</span><span class="p">(</span><span class="s1">'all'</span><span class="p">)</span>
@@ -7867,7 +7867,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [155]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [23]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">first_year</span><span class="o">.</span><span class="n">describe</span><span class="p">()</span>
@@ -7881,7 +7881,7 @@ a.anchor-link {
 </div>
 <div class="jp-OutputArea jp-Cell-outputArea">
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
-<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[155]:</div>
+<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[23]:</div>
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
 <div>
 <style scoped="">
@@ -7918,7 +7918,7 @@ a.anchor-link {
 </tr>
 <tr>
 <th>top</th>
-<td>brooklynplanning.nyc</td>
+<td>gree.nyc</td>
 <td>ORG</td>
 </tr>
 <tr>
@@ -7951,7 +7951,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [156]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [24]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">first_year_indiv</span> <span class="o">=</span> <span class="n">first_year</span><span class="p">[</span><span class="n">first_year</span><span class="p">[</span><span class="s1">'nexus_category'</span><span class="p">]</span> <span class="o">==</span> <span class="s1">'INDIV'</span><span class="p">]</span>
@@ -7971,13 +7971,13 @@ a.anchor-link {
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
 <pre>                                            url nexus_category
 registration_date                                             
+2014-06-20 15:11:23           nyc-limousine.nyc          INDIV
+2014-06-20 15:11:38            nyclimousine.nyc          INDIV
+2014-06-20 15:13:55                    ldny.nyc          INDIV
 2014-07-23 19:56:51              unionsqbid.nyc          INDIV
 2014-07-23 19:56:52      unionsqpartnership.nyc          INDIV
 2014-07-23 19:56:54          unionsquarebid.nyc          INDIV
 2014-07-23 19:56:55  unionsquarepartnership.nyc          INDIV
-2014-06-20 15:11:23           nyc-limousine.nyc          INDIV
-2014-06-20 15:13:55                    ldny.nyc          INDIV
-2014-06-20 15:11:38            nyclimousine.nyc          INDIV
 </pre>
 </div>
 </div>
