--- a/public/Results.html
+++ b/public/Results.html
@@ -7635,7 +7635,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [19]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [5]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
@@ -7656,18 +7656,18 @@ a.anchor-link {
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
-<pre>                    url       registration_date nexus_category
-0               nic.nyc  08/09/2013 10:39:30 PM            ORG
-1        applestore.nyc   06/20/2014 3:10:35 PM            ORG
-2              yelp.nyc   06/20/2014 3:10:35 PM            ORG
-3            iheart.nyc   06/20/2014 3:10:35 PM            ORG
-4         priceline.nyc   06/20/2014 3:10:36 PM            ORG
-...                 ...                     ...            ...
-61230         annex.nyc   11/14/2024 9:12:34 PM            ORG
-61231  studiotehran.nyc   11/14/2024 9:40:12 PM          INDIV
-61232  citybikeboys.nyc  11/14/2024 10:25:40 PM          INDIV
-61233   photobooths.nyc  11/14/2024 10:42:55 PM          INDIV
-61234        cypher.nyc  11/14/2024 11:58:58 PM          INDIV
+<pre>            domain_name domain_registration_date nexus_category
+0               nic.nyc   08/09/2013 10:39:30 PM            ORG
+1        applestore.nyc    06/20/2014 3:10:35 PM            ORG
+2              yelp.nyc    06/20/2014 3:10:35 PM            ORG
+3            iheart.nyc    06/20/2014 3:10:35 PM            ORG
+4         priceline.nyc    06/20/2014 3:10:36 PM            ORG
+...                 ...                      ...            ...
+61230         annex.nyc    11/14/2024 9:12:34 PM            ORG
+61231  studiotehran.nyc    11/14/2024 9:40:12 PM          INDIV
+61232  citybikeboys.nyc   11/14/2024 10:25:40 PM          INDIV
+61233   photobooths.nyc   11/14/2024 10:42:55 PM          INDIV
+61234        cypher.nyc   11/14/2024 11:58:58 PM          INDIV
 
 [61235 rows x 3 columns]
 </pre>
@@ -7691,7 +7691,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [20]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [6]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
@@ -7701,10 +7701,10 @@ a.anchor-link {
 <span class="n">df_by_date</span> <span class="o">=</span> <span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">initial_df</span><span class="p">)</span>
 
 <span class="c1"># Ensure the registration_date column is datetimes</span>
-<span class="n">df_by_date</span><span class="p">[</span><span class="s1">'registration_date'</span><span class="p">]</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">to_datetime</span><span class="p">(</span><span class="n">df_by_date</span><span class="p">[</span><span class="s1">'registration_date'</span><span class="p">],</span> <span class="nb">format</span><span class="o">=</span><span class="s2">"%m/</span><span class="si">%d</span><span class="s2">/%Y %I:%M:%S %p"</span><span class="p">)</span>
+<span class="n">df_by_date</span><span class="p">[</span><span class="s1">'domain_registration_date'</span><span class="p">]</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">to_datetime</span><span class="p">(</span><span class="n">df_by_date</span><span class="p">[</span><span class="s1">'domain_registration_date'</span><span class="p">],</span> <span class="nb">format</span><span class="o">=</span><span class="s2">"%m/</span><span class="si">%d</span><span class="s2">/%Y %I:%M:%S %p"</span><span class="p">)</span>
 
 <span class="c1"># Set the index column of the DataFrame to the registration_date values</span>
-<span class="n">df_by_date</span><span class="o">.</span><span class="n">set_index</span><span class="p">(</span><span class="s1">'registration_date'</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+<span class="n">df_by_date</span><span class="o">.</span><span class="n">set_index</span><span class="p">(</span><span class="s1">'domain_registration_date'</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 
 <span class="c1"># Get count of registrations per month ('ME')</span>
 <span class="n">counts</span> <span class="o">=</span> <span class="n">df_by_date</span><span class="o">.</span><span class="n">resample</span><span class="p">(</span><span class="s1">'ME'</span><span class="p">)</span><span class="o">.</span><span class="n">size</span><span class="p">()</span>
@@ -7758,7 +7758,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [21]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [7]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">counts</span><span class="o">.</span><span class="n">plot</span><span class="p">()</span>
@@ -7808,7 +7808,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [22]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [8]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">plt</span><span class="o">.</span><span class="n">close</span><span class="p">(</span><span class="s1">'all'</span><span class="p">)</span>
@@ -7817,13 +7817,13 @@ a.anchor-link {
 <span class="n">first_year</span> <span class="o">=</span> <span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">initial_df</span><span class="p">)</span>
 
 <span class="c1"># Ensure the registration_date column is datetimes</span>
-<span class="n">first_year</span><span class="p">[</span><span class="s1">'registration_date'</span><span class="p">]</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">to_datetime</span><span class="p">(</span><span class="n">first_year</span><span class="p">[</span><span class="s1">'registration_date'</span><span class="p">],</span> <span class="nb">format</span><span class="o">=</span><span class="s2">"%m/</span><span class="si">%d</span><span class="s2">/%Y %I:%M:%S %p"</span><span class="p">)</span>
+<span class="n">first_year</span><span class="p">[</span><span class="s1">'domain_registration_date'</span><span class="p">]</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">to_datetime</span><span class="p">(</span><span class="n">first_year</span><span class="p">[</span><span class="s1">'domain_registration_date'</span><span class="p">],</span> <span class="nb">format</span><span class="o">=</span><span class="s2">"%m/</span><span class="si">%d</span><span class="s2">/%Y %I:%M:%S %p"</span><span class="p">)</span>
 
 <span class="c1"># Filter to registrations before 2014-10-01</span>
-<span class="n">first_year</span> <span class="o">=</span> <span class="n">first_year</span><span class="p">[</span><span class="n">first_year</span><span class="p">[</span><span class="s1">'registration_date'</span><span class="p">]</span> <span class="o">&lt;</span> <span class="s1">'2014-10-01'</span><span class="p">]</span>
+<span class="n">first_year</span> <span class="o">=</span> <span class="n">first_year</span><span class="p">[</span><span class="n">first_year</span><span class="p">[</span><span class="s1">'domain_registration_date'</span><span class="p">]</span> <span class="o">&lt;</span> <span class="s1">'2014-10-01'</span><span class="p">]</span>
 
 <span class="c1"># Set the index column of the DataFrame to the registration_date values</span>
-<span class="n">first_year</span><span class="o">.</span><span class="n">set_index</span><span class="p">(</span><span class="s1">'registration_date'</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+<span class="n">first_year</span><span class="o">.</span><span class="n">set_index</span><span class="p">(</span><span class="s1">'domain_registration_date'</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 
 <span class="c1"># Get count of registrations per day ('D')</span>
 <span class="n">counts</span> <span class="o">=</span> <span class="n">first_year</span><span class="o">.</span><span class="n">resample</span><span class="p">(</span><span class="s1">'D'</span><span class="p">)</span><span class="o">.</span><span class="n">size</span><span class="p">()</span>
@@ -7867,7 +7867,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [23]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [9]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">first_year</span><span class="o">.</span><span class="n">describe</span><span class="p">()</span>
@@ -7881,7 +7881,7 @@ a.anchor-link {
 </div>
 <div class="jp-OutputArea jp-Cell-outputArea">
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
-<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[23]:</div>
+<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[9]:</div>
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
 <div>
 <style scoped="">
@@ -7901,7 +7901,7 @@ a.anchor-link {
 <thead>
 <tr style="text-align: right;">
 <th></th>
-<th>url</th>
+<th>domain_name</th>
 <th>nexus_category</th>
 </tr>
 </thead>
@@ -7951,7 +7951,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [24]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [10]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">first_year_indiv</span> <span class="o">=</span> <span class="n">first_year</span><span class="p">[</span><span class="n">first_year</span><span class="p">[</span><span class="s1">'nexus_category'</span><span class="p">]</span> <span class="o">==</span> <span class="s1">'INDIV'</span><span class="p">]</span>
@@ -7969,15 +7969,15 @@ a.anchor-link {
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
-<pre>                                            url nexus_category
-registration_date                                             
-2014-06-20 15:11:23           nyc-limousine.nyc          INDIV
-2014-06-20 15:11:38            nyclimousine.nyc          INDIV
-2014-06-20 15:13:55                    ldny.nyc          INDIV
-2014-07-23 19:56:51              unionsqbid.nyc          INDIV
-2014-07-23 19:56:52      unionsqpartnership.nyc          INDIV
-2014-07-23 19:56:54          unionsquarebid.nyc          INDIV
-2014-07-23 19:56:55  unionsquarepartnership.nyc          INDIV
+<pre>                                         domain_name nexus_category
+domain_registration_date                                           
+2014-06-20 15:11:23                nyc-limousine.nyc          INDIV
+2014-06-20 15:11:38                 nyclimousine.nyc          INDIV
+2014-06-20 15:13:55                         ldny.nyc          INDIV
+2014-07-23 19:56:51                   unionsqbid.nyc          INDIV
+2014-07-23 19:56:52           unionsqpartnership.nyc          INDIV
+2014-07-23 19:56:54               unionsquarebid.nyc          INDIV
+2014-07-23 19:56:55       unionsquarepartnership.nyc          INDIV
 </pre>
 </div>
 </div>
